<resources>
    <string name="app_name">TomaAguaApp</string>

    <string name="premium_name">Volverse Premium</string>
    <string name="re_contras">Recupera tu Contraseña</string>
    <string name="premium_compra">Comprar Premium</string>
    <string name="premium_2">¿Deseas Comprar la Version Premium?</string>
    <string name="todo">TODO</string>
    <string name="comprar_premium">Comprar Premium</string>
    <string name="btn_log_admin">Administrador</string>
    <string name="btn_gotoreportes">Reportar</string>
    <string name="btn_gotoubicaciones">Ubicaciones</string>
    <string name="btn_gotopremium">Premium</string>
    <string name="btn_gotoverreportes">Ver reportes</string>
    <string name="btn_gotodaralta">Dar de alta</string>

    <string name="button">Button</string>
    <string name="enviar_reporte_de_recuperaci_n">Enviar Reporte de Recuperación</string>

    <string name="txt_title_ubicaciones">Ubicaciones</string>
    <string name="txt_title_inicio">Inicio</string>
    <string name="txt_desc_mapatec">Mapa del Tecnológico vía satélital</string>
    <string name="txt_desc_spi_edificios">Spinner de los edificios</string>

    <string name="name_app">U’UK JA’</string>
    <string name="slogan_app">Hidratate Sanamente</string>

    <string name="txt_login">Login</string>

    <string name="txt_correo">Correo Institucional</string>
    <string name="txt_contraseña">Contraseña</string>

    <string name="btn_login">Iniciar Sesión</string>
    <string name="olvide_contraseña">¿Olvidaste tu contraseña?</string>

    <string name="re_garra">Registro de Garrrafones</string>

    <string name="num_dis">Numero de dispensador</string>
    <string name="cont_lit">Contenido actual en litros</string>
    <string name="dispo">Disponibilidad</string>
    <string name="water">Agua Fría</string>
    <string name="waterhot">Agua Caliente</string>
    <string name="ubi">Ubicación</string>
    <string name="borra">Borrar</string>
    <string name="guarda">Guardar</string>
    <string name="add">Añadir nuevo</string>
    <string name="re_report">Realizar Reporte</string>
    <string name="dispe">Dispensador</string>
    <string name="info">El edificio A cuenta con 3 dispensadores actualmente.</string>
    <string name="title_home">Inicio</string>
    <string name="btn_reporte">Reportar</string>
    <string name="date_reporte">Fecha</string>
    <string name="hit_reporte">Dejanos tu Opinion</string>

    <string name="title_status">Status</string>
    <string name="dispoStatus">Disponibilidad</string>
    <string name="item_frio">Frio</string>

    <string name="txt_btn_verreporte">Ver Reporte</string>
    <string name="txt_title_verreporte">Reportes</string>
    <string name="txt_matricula">6578 Ha realizado un reporte</string>
    <string name="txt_fecha">01/04/2022</string>
    <string name="txt_matricula_2">6602 Ha realizado un reporte</string>
    <string name="txt_edificio">En el Edificio A - Dispensador 3</string>
    <string name="txt_descripcion_img">Imagen</string>
    <string name="showEstatus">Estatus</string>


</resources>
